--- a/_source/css/sass/_mootor.nav.scss
+++ b/_source/css/sass/_mootor.nav.scss
@@ -18,7 +18,7 @@ body {
 
 // Header
 
-#header {
+.moo-header {
     text-align: left;
     z-index: 9999;
     position: fixed;
@@ -45,7 +45,7 @@ body {
     width: 100%;
     left: 0;
     min-height: 100%;
-    .panel {
+    .moo-panel {
         min-height: 100%;
         width: 100%;
         position: absolute;
@@ -71,7 +71,7 @@ nav {
 
 // Hacks
  
-#panels .panel {
+#panels .moo-panel {
     // Prevents flicker on transform3d (iOS)    
     -webkit-transition-duration:0;
     -webkit-transform:translate3d(0,0,0);
