--- a/css/src/styles.scss
+++ b/css/src/styles.scss
@@ -61,11 +61,11 @@ p {
 
 // Navigation
 
-.panel {
+.moo-panel {
     background: $subColor1B;
 }
 
-#header {
+.moo-header {
     box-shadow: 1px 2px 2px rgba(0, 0, 0, .1);    
     color: $subColor1;    
     font-weight: bold ;
@@ -95,7 +95,7 @@ nav a {
     border-top: 1px solid $subColor1C;
 }
 
-.nav.active {
+.moo-nav.active {
     background: $empColor2B; 
     color: $subColor1;
 }
