--- a/index.haml
+++ b/index.haml
@@ -10,15 +10,15 @@
     / %script{:src=>"js/geo.js",:type=>"text/javascript"}
 %body.main
 
-    %header#header
+    %header#header.moo-header
         %h1 Mootor demo
         %nav
-            %a.nav{:href=>"", :rel=>"back"} Back
+            %a.moo-nav{:href=>"", :rel=>"back"} Back
 
     #panels
 
         /
-            .panel#home
+            .moo-panel#home
                 %nav
                     %a.nav{:href=>"", :rel=>"nav"} Nav
                     %a.nav{:href=>"", :rel=>"ui"} UI
@@ -27,27 +27,28 @@
                     %a.nav{:href=>"", :rel=>"graph"} Graph
                     %a.nav{:href=>"", :rel=>"carousel"} Carousel
 
-        .panel#ui
+        .moo-panel#ui
             %h2 User Interface
-            .hidden
+            .moo-hidden
                 %form#uiform.moo-ui-form{:action=>"", :method=>"post"}
-                    .field
+                    .moo-field
                         %label Input checkbox
                         .moo-ui-switch#switch1
                             %input#check1{:type=>"checkbox", :name=>"checkbox1" ,:value=>"0"}  
-                    .field
+                    .moo-field
                         %label Input de texto
                         .moo-ui-text
                             %input#txt1{:type=>"text", :name=>"text1" ,:placeholder=>"Ingrese su texto aqui"}
                             %a.cleanbox{:href=>""} &times;
                        
-                    .field
+                    .moo-field
                         %label &Aacute;rea de texto
                         .moo-ui-textarea
                             %textarea#txta1{:name=>"textarea1" ,:placeholder=>"Ingrese su texto aqui"}
-                    .field
+                    .moo-field
                         %label Select menu
-                        .moo-ui-select-container.bottom
+                        .moo-ui-select-container.top
+                            %a.moo-ui-select-link{:href=>""} &#9660; 
                             .moo-ui-select-menu{:style=>'height: 217px;'}
                                 %ul.moo-ui-select-list{:style=>'height: 200px;'}
                                     %li Item 1
@@ -73,46 +74,46 @@
                                 %option Text 3
                                 %option Text 4
                                 
-                    .field
+                    .moo-field
                         %label Input radio
                         .moo-ui-checkbox#radiobtn
                             %input#radio1{:type=>"radio", :name=>"radiobutton1" ,:value=>"0"}
-                    .field
+                    .moo-field
                         %label Input radio
                         .moo-ui-checkbox#radiobtn
                             %input#radio1{:type=>"radio", :name=>"radiobutton1" ,:value=>"0"}
 
-                    .field
+                    .moo-field
                         %label Tooltip
                         #radiobtn
                             %span#tooltipTest Show me the tooltip!
         /
-            .panel#nav
+            .moo-panel#nav
                 %nav
                     %a.nav{:href=>"", :rel=>"item1"} Item 1
                     %a.nav{:href=>"", :rel=>"item2"} Item 2
 
-            .panel#item1
+            .moo-panel#item1
                 %h2 Item 1
                 %p
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
 
-            .panel#item2
+            .moo-panel#item2
                 %h2 Item 2
                 %p
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
                 
-            .panel#geolocalization
+            .moo-panel#geolocalization
                 %h2 Geolocalization
                 %h3 This module is not activated. See $.geolocation
                 %h3#msg
                 #error
 
-            .panel#data
+            .moo-panel#data
                 %h2 Data
                 %h3 This module is not implemented yet.
 
-            .panel#graph
+            .moo-panel#graph
                 %h2 Graph
                 %h3 This module is not implemented yet.
                 %p
@@ -126,7 +127,7 @@
                 %p
                     Mauris aliquam nunc a augue malesuada vel congue nunc cursus. Proin pellentesque diam iaculis sapien convallis ac sagittis sem feugiat. Ut ac iaculis neque. Curabitur vel felis non nisi rhoncus mollis suscipit quis nisi. Integer vitae augue at lorem pellentesque placerat. Donec ac nibh id massa malesuada adipiscing. Cras egestas, ligula eget tempor sagittis, metus arcu convallis orci, vehicula tempor arcu tortor quis dolor. Nullam facilisis iaculis magna sed suscipit.
      
-            .panel#carousel
+            .moo-panel#carousel
                 %h2 Carousel
                 %h3 This module is not implemented yet.
                 %p
